PDFBOX-3017: replace method that is deprecated in later jdk versions
git-svn-id: https://svn.apache.org/repos/asf/pdfbox/trunk@1854931 13f79535-47bb-0310-9956-ffa450edef68